@@ -11,6 +11,7 @@
 
 
 ngIRCd 0.7.0
+  - "ServerName" is checked better now: a dot (".") is required.
   - The KILL comand verifies and logs more parameters.
 
   ngIRCd 0.7.0-pre2 (2003-04-27)
@@ -446,4 +447,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.188.2.11 2003/04/29 12:20:14 alex Exp $
+$Id: ChangeLog,v 1.188.2.12 2003/04/29 12:37:17 alex Exp $
